# projecto-final-grupogpt

./: CMakeLists.txt  README.md  common_helpers.h  image_processor.h  mnist_loader.h  neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  predict.cpp  stb_image_resize.h  tensor.h  train.cpp
data/: layer0_biases.txt  model_architecture.txt
layer_output/: layer0_biases.txt  layer0_weights.txt  layer2_biases.txt  layer2_weights.txt  layer4_biases.txt  layer4_weights.txt
nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
util/: ascii_view.h  common_helpers.h  image_processor.h
utils/: tensor.h
